package Descartadas.Álvaro.Árboles;

public interface DuplicateSearchTree<T> {
    void removeOne(T data);
}